# Chess_AI

./: .gitignore  CMakeLists.txt  README.md  pawns.h
src/: blackpieces.cpp  blackpieces.h  engine.cpp  engine.h  game.cpp  game.h  gamestate.cpp  gamestate.h  main.cpp  movegen.cpp  movegen.h  pawns.cpp  pawns.h  types.h  ui.cpp  ui.h  whitepieces.cpp  whitepieces.h
src/util/: table.h  types.h  util.h
